==================== 2.19.90 ====================

2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Bump to version 2.19.90
	
	* Makefile.am: 
	s/yelp.desktop.in/yelp.desktop.in.in/
	Fixes distcheck (1) - other is in po/ChangeLog
	(Rodney Dawes)
	
2007-08-12  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	When no frag specified, use x-yelp-index instead
	of index as this breaks some documents

	Don't idle-write to gecko as this (apparently) breaks
	about eleventy billion info pages

2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-geck-services.h:
	* src/yelp-geck-services.cpp:
	* src/yelp-print.c:
	* src/yelp-print.h:
	* MAINTAINERS:
	Move to new format in line
	with bkor's request
	Also, update my email address
	
	* src/yelp-window.c:
	Add a "Phrase not found" message to
	the search bar when the term isn't found.
	
	* src/yelp-window.c:
	Fix "info <page>" in search bar

	* src/yelp-man-parser.c: 
	Handle malformed .so tags better
	(bug #447107 - Matt Keenan)
	
	* src/yelp-man-parser.c: 
	Better handling of cross links in man pages
	(bug #431078 - Matthias Clasen)

	* src/yelp-info-parser.c: 
	Fix crash in bc, automake16 and gnutls info pages
	(bug #430365 - Matthias Clasen)
	
	* src/yelp-print.c:
	Remove extra markup from message dialog
	(bug #381431 - Christian Persch)

	* src/yelp-search-parser.c: 
	When slow searching for ':',
	don't crash
	(Bug #364768 again)
	
	* src/yelp-search-parser.c: 
	Fix apropos handling on Fedora
	Fix possible memleak
	Handle results with spaces
	(bug #370167 - Matthias Clasen)

	* src/yelp-man-parser.c:
	Handle '\*=' escape sequence correctly
	(bug #358825 - Björn Lindqvist)

	* src/yelp-utils.c: 
	Resolve a full path within a ghelp uri
	correctly (bug #464295)
	
	* src/yelp-gecko-services.cpp:
	* src/yelp-debug.c:
	reduce relocations by removing unnecessarily 
	static data, and non-const data.
	(bug #457082 - Christian Persch)

	* src/yelp-window.c: 