@@ -1,3 +1,10 @@
+2007-08-17  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-settings.c:
+	* stylesheets/yelp-common.xsl:
+	* stylesheets/db2html.xsl.in:
+	- Themed colors and some CSS customizations
+
 ==================== 2.19.90 ====================
 
 2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>
